[package]
name = "udp-puncher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.98"
bytes = "^1.10.1"
env_logger = "^0.11.8"
gethostname = "^1.0.2"
log = "^0.4.27"
mio = { version = "1.0.4", features = ["os-poll", "net", "os-ext"] }
network-types = "^0.0.8"
socket2 = { version = "^0.5.10", features = ["all"] }
tokio = { version = "^1.45.1", features = ["full"] }
zerocopy = { version = "^0.8.26", features = ["derive"] }
