[package]
name = "udp-puncher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.98"
bytes = "^1.10.1"
ctrlc = "3.4.7"
env_logger = "^0.11.8"
errno = "0.3.13"
gethostname = "^1.0.2"
local-ip-address = "0.6.5"
log = "^0.4.27"
network-types = "^0.0.8"
socket2 = { version = "0.6.0", features = ["all"] }
zerocopy = { version = "^0.8.26", features = ["derive"] }
